--- a/CSS/.CSS
+++ b/CSS/.CSS
@@ -1,6 +1,55 @@
-.div {
+body {
 
-    border: 1px solid;
-    color: aqua;
+
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), linear-gradient(90deg, #1E13A0 0%, #00D3FF 72.40%);
+
+}
+
+div { 
+    border: none;
+    background-color: aqua;
+    position: relative;
+    right: 10px;
+    
+
+}
+
+#container {
+    display: grid;
+    grid-template-areas: 
+    'home menu1 profile login';
+    width: 1423px;
+    height: 133px;
+
+
+
+}
+
+
+
+.home {
+    grid-area: home;
+    position: relative;
+    left: 20px;
+
+}
+
+.menu1 {
+    grid-area: menu1;
+    position: relative;
+    left: 500px;
+    
+}
+
+.profile {
+    grid-area: profile;
+    position: relative;
+    left: 200px;
+}
+
+.login {
+    grid-area: login;
+    position: relative;
+    left: 120px;
 
 }
