--- a/possition.css
+++ b/possition.css
@@ -2,10 +2,13 @@ div.sticky {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    left: 100%;
+    width: 1000;
     padding: 5px;
     background-color: #cae8ca;
     border: none solid #4CAF50;
     display: inline;
+    text-align: ;
   }
 
   #parent1 {
