--- a/tugas kemerdekaan/css/stylehalutama.css
+++ b/tugas kemerdekaan/css/stylehalutama.css
@@ -53,8 +53,22 @@ body{
     font-size: 20px;
     color: rgb(0, 0, 0);
     font-weight: 500;
-    margin-right: 40px;
+    margin-left: 6rem;
+}
 
+
+.navbar a {
+        font-size: 1.5rem;
+        color: white;
+        margin-left: 5rem;
+        margin-top: 6px;
+        text-decoration: none;
+        display: inline-block;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        
+    
 
 }
 
