--- a/css/personalweb.css
+++ b/css/personalweb.css
@@ -11,7 +11,9 @@
     border: none;
     outline: none;
     scroll-behavior: smooth;
-    font-family: 'Fredoka', sans-serif;
+    font-family: 'Fredoka', sans-serif !important;
+    font-family: 'Inter', sans-serif;
+
     
 }
 
@@ -20,7 +22,9 @@
     --bg-color:linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), linear-gradient(90deg, hsl(245, 79%, 35%) 0%, #00D3FF 72.40%);
     --text-color: white;
     --nav-color: linear-gradient(270deg, rgba(255, 255, 255, 0.23) 0%, rgba(255, 255, 255, 0.00) 54.17%);
-
+    --second-color:rgb(77, 243, 255);
+    --thir-color:aqua;
+    --main-color: hsl(245, 67%, 45%);
 }
 
 html {
@@ -46,7 +50,7 @@ body {
     left: 0;
     width: 100%;
     padding: 2rem 9%;
-    background: transparent;
+    background:transparent;
     display: flex;
     justify-content: space-between;
     text-align: center;
@@ -54,13 +58,42 @@ body {
 
 }
 
+.header a:hover{
+
+    color: var(--second-color);
+    transition: .5s;
+
+    
+
+
+}
+
+/*
+jika ingin mengganti logo memakai logo gambar maka gunakan variable ini
+
+.header .logo img{
+
+    width: 50px;
+    height: 50px;
+    max-width: 100%;
+
+}
+*/
+
+
+/* gunakan variable .logo dibawah jika logo nya adalah text */
+
 .logo{
 
     font-size: 2.5rem;
     color: var(--text-color);
     font-weight: 600;
+    font-family: 'Inter', sans-serif !important; 
+
+    
 
 }
+
 
 .navbar a{
 
@@ -139,6 +172,8 @@ section {
     font-size: 5.6rem;
     font-weight: 700;
     line-height: 1.3;
+    font-family: 'Inter', sans-serif !important; 
+
 
 }
 
@@ -151,10 +186,14 @@ section {
 
 .home-content .text-animation h3 {
 
-    font-size: 3.2rem;
+    font-size: 5.2rem;
     font-weight: 700;
     color: transparent;
     -webkit-text-stroke: .7px aqua;
+    font-family: 'Inter', sans-serif !important; 
+
+    
+
 
 
 }
@@ -200,19 +239,24 @@ section {
 .btn-box .btn:nth-child(2) {
 
     background: transparent;
-    color: #ffffff;
+    color: var(--second-color);
 
 }
 
 .btn-box .btn:nth-child(2):hover {
 
-    color: aqua;
+    color: white;
+}
+
+.btn-box .btn:nth-child(1):hover {
+
+    color: none;
 
 }
 
 .btn-box .btn:nth-child(1)::before {
 
-    background:;..
+    background:var(--bg-color);
 
 }
 
@@ -343,6 +387,7 @@ span {
 
     font-size: 5rem;
     text-align: center;
+    padding-bottom: 3rem;
 
 }
 
@@ -400,6 +445,7 @@ span {
 
     font-size: 1.6rem ;
     margin: 2rem 0 3rem;
+    
 
 }
 
@@ -427,11 +473,13 @@ span {
 
 }
 
-.education .education-row {
+
+.education .education-row{
 
     display: flex;
     flex-wrap: wrap;
     gap: 5rem;
+
 
 }
 
@@ -444,7 +492,246 @@ span {
 .education-column .title {
 
     font-size: 2.5rem;
-    margin:  0 0 1.5rem 2rem;
+    margin: 0 0 1.5rem;
+}
+
+.education-column .education-box {
+
+    border-left: .4rem solid var(--second-color);
+
+}
+
+.education-box .education-content {
+
+    position: relative;
+    padding-left: 2rem;
+
+}
+
+.education-box .education-content::before {
+
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -1.1rem;
+    width: 2rem;
+    height: 2rem;
+    background: var(--second-color);
+    border-radius: 50%;
+
+}
+
+
+.education-content .content{
+
+    position: relative;
+    padding: 1.5rem;
+    border: .4rem solid var(--thir-color);
+    border-radius:  .6rem;
+    margin-bottom: 2rem;
+    overflow: hidden;
+
+}
+
+.education-content .content::before{
+
+    content: '';
+    position: absolute;
+    top: 0;
+    left:  0;
+    width: 0; 
+    height: 100%;
+    background: var(--bg-color);
+    z-index: -1;
+    transition: .5s;
+
+}
+
+.education-content .content:hover::before{
+
+    width: 100%;
+
+
+}
+
+.education-content .content .year {
+
+    font-size: 1.5rem;
+    color: var(--second-color);
+    padding-bottom: .5rem;
+
+}
+
+.education-content .content .year i {
+
+    padding-right:  .5rem;
+
+}
+
+.education-content .content h3 {
+
+    font-size: 2rem;
+
+}
+
+.education-content .content p {
+
+    font-size: 1.6rem;
+    padding-top: .5rem;
+
+}
+
+
+.skills{
+
+    min-height: auto;
+    padding-bottom: 7rem;
+    background: var(--bg-color);
+
+}
+
+.skills .skills-row{
+
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5rem;
+
+}
+
+.skills .skills-column{
+
+    flex: 1 1 40rem;
+
+}
+
+.skills-column .title{
+
+    font-size: 2.5rem;
+    margin: 0 0 1.5rem;
+
+}
+
+.skills-box .skills-content {
+
+    position: relative;
+    border: .2rem solid var(--second-color);
+    border-radius: .6rem;
+    padding: .5rem 1.5rem;
+    z-index: 1;
+    overflow: hidden;
+
+}
+
+.skills-box .skills-content::before {
+
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: var(--bg-color);
+    z-index: -1;
+    transition: .5s;
+
+}
+
+.skills-box .skills-content:hover::before{
+
+    width: 100%;
+
+}
+
+.skills-content .progress {
+
+    padding: 1rem 0;
+
+}
+
+.skills-content .progress h3 {
+
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    
+}
+.skills-content .progress h3 span {
+
+    color: var(--text-color);
+
+}
+
+.skills-content .progress .bar{
+
+    height: 2.5rem;
+    border: .2rem solid var(--thir-color);
+    border-radius: .6rem;
+    padding: .5rem;
+    margin: 1rem 0;
+
+}
+
+.skills-content .progress .bar span {
+
+    display: block;
+    height: 100%;
+    border-radius: 3rem;
+    background: var(--second-color);
+
+}
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(1) .bar span{
+
+    width: 90%;
+
+}
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(2) .bar span{
+
+    width: 80%;
+
+}
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(3) .bar span{
+
+    width: 70%;
+
+}
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(4) .bar span{
+
+    width: 80%;
+
+}
+
+.skills-column:nth-child(1) .skills-content .progress:nth-child(1) .bar span{
+
+    width: 90%;
+
+}
+
+.skills-column:nth-child(2) .skills-content .progress:nth-child(1) .bar span{
+
+    width: 90%;
+
+}
+
+.skills-column:nth-child(2) .skills-content .progress:nth-child(2) .bar span{
+
+    width: 90%;
+
+}
+
+.skills-column:nth-child(2) .skills-content .progress:nth-child(3) .bar span{
+
+    width: 50%;
+
+}
+
+
+.skills-column:nth-child(2) .skills-content .progress:nth-child(4) .bar span{
+
+    width: 40%;
 
 }
 
