--- a/tugas kemerdekaan/css/stylecssprofilecard.css
+++ b/tugas kemerdekaan/css/stylecssprofilecard.css
@@ -1,81 +1,269 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@500&family=Inter:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Istok+Web:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@500&family=Inter:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Istok+Web:wght@400;700&display=swap");
 
+body {
 
-body{
-    background: url('../images/indonesia.png');
+    /* background: url("../images/indonesia.png"); */
+
 }
 
+.card-galery {
 
-#card{
+    font-family: "Inter", sans-serif !important;
+
+}
+#card {
+
     background-color: #fff;
-    height: auto;
+    height: 100%;
     width: 350px;
     max-width: 100%;
-    margin: 5;
-    position: fixed;
-    top: 25;
-    left: 226;
-    border-radius: 25px;
-    box-shadow:5px 5px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+    margin: 20px 0;
+    transition: 0.3s;
+
 }
-#card:hover{
-    box-shadow:2px 2px 5px rgba(0, 0, 0, 0.5);
+
+#card:hover {
+
+    box-shadow: 0px 0px 18px rgba(0, 85, 255, 0.5);
+
 }
-.card-head{
-    background: linear-gradient(to right, #8f0404,#f30003);
+
+.card-head {
+
+    /* background: linear-gradient(to right, #ff5100,#ff5100); */
+    background-image: url("..//img/pemandanganalam.jpeg");
+    background-size: cover;
     text-align: center;
     width: 100%;
+    max-width: 100%;
+    background-color: #e6ebee;
+    border-radius: 5px 5px 0 0;
+    color: #393b45;
+    height: 130px;
+    font-weight: 800;
+    margin: 0;
+
+}
+
+body {
+
+    background: url('../images/indonesia.png');
+
+}
+
+.col- h1 {
+
+    font-family:'Work Sans', sans-serif !important;
+    font-weight: bold;
+    font-size: 2.5rem !important;
+
+}
+
+.card-galery {
+
+    font-family: 'Work Sans', sans-serif !important;
+
+}
+
+#card {
+
+    background-color: #fff;
+    height: 100%;
+    width: 350px;
+    max-width: 100%;
+    border-radius: 5px;
+    box-shadow:0px 0px 18px rgba(0, 0, 0, 0.1);
+    margin: 20px 0;
+    transition: 0.3s;
+
+}
+
+#card:hover{
+
+    box-shadow:0px 0px 18px rgba(0, 85, 255, 0.5);
+
+}
+
+.card-head{
+
+    /* background: linear-gradient(to right, #ff5100,#ff5100); */
+    background-image: url("..//img/bgprofile.jpg");
+    background-size: cover;
+    text-align: center;
+    width: 100%;
+    max-width: 100%;
     background-color: #E6EBEE;
-    border-radius: 25px 25px 0 0;
+    border-radius: 5px 5px 0 0;
     color: #393B45;
     height: 130px;
     font-weight: 800;
     margin: 0;
+
 }
-h1 {
+
+.card-head :nth-child(2) {
+
+  background-color: red;
+
+}
+
+h1 { 
+
+  text-align: center;
+  color: red;
+  font-weight: 900;
+  font-size: 32px !important ;
+  font-family: "Fredoka", sans-serif !important;
+  padding-top: 5px;
+
+}
+
+h1 span {
+  color: rgb(7, 131, 162);
+}
+
+.image-crop {
+
+    display: block;
+    position: relative;
+    background-color: #e6ebee;
+    width: 120px;
+    height: 120px;
+    margin: 0 auto;
+    margin-top: -80px;
+    overflow: hidden;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    border: 3px solid #fff;
     text-align: center;
-    width: 100%;
     color: red;
-    font-weight: 800;
-    font-family: 'Fredoka', sans-serif;
+    font-weight: 900;
+    font-size: 32px !important ;
+    font-family: 'Fredoka', sans-serif !important;
+    padding-top: 5px;
+
+}
+
+h1 span {
+
+    color: #096686 !important;
+
+}
+
+.icon{
+
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    position: relative;
+    font-size: 35px;
+    letter-spacing: 20px;
+    color: #096686;
+    padding: 0;
+    left: 10px;
+    cursor: pointer;
+
+}
+
+.icon a{
+
+    text-decoration: none;
+    text-transform: none;
+    color: #096686;
+    transition: 0.3s;
+
+}
+
+.icon a:hover{
+
+    color: #22a6d2;
 
 }
 
 .image-crop {
+
     display: block;
     position: relative;
     background-color: #E6EBEE;
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
     margin: 0 auto;
     margin-top: -80px;
     overflow: hidden;
     border-radius: 50%;
     box-shadow:2px 2px 5px rgba(0, 0, 0, 0.5);
     border:3px solid #fff;
+    cursor: pointer;
+    
 }
+
 #avatar {
+
     display: inline;
     height: 230px;
     width: auto;
     margin-left: -34px;
+    display: inline;
+    height: 230px;
+    width: auto;
+    margin-left: -34px;
+
 }
+
 #bio {
     margin: 30px 15px;
     height: auto;
-    display: block;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin: 15px 15px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    /* font-family:'Work Sans', sans-serif !important; */
+
 }
+
 #bio p {
+
+  color: #222;
+  font-weight: lighter;
+  font-size: 14px;
+  text-align: center;
+  font-weight: 400;
+
+}
+
+#stats {
+
+    display: flex;
+    flex-direction: row;
+    height: auto;
+    width: 280px;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    font-weight: 500;
     color: #222;
     font-weight: lighter;
-    font-size: 14px;
-    text-align: justify;
+    font-size: 15px;
+    text-align: center;
+    font-weight:450;
+    
     
 }
+
 #stats {
+
     display: flex;
     flex-direction: row;
     height: auto;
@@ -85,201 +273,138 @@ h1 {
     margin: 0 auto;
     font-weight: 500;
 }
+
 .col {
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+
 }
+
 .stat {
+
     font-size: 25px;
     margin: 0;
+
 }
 
 .label {
+
     margin: 0;
+    font-size: 25px;
+    margin: 0;
+
 }
+
+.label {
+
+    margin: 0;
+
+}
+
 #buttons {
+
     display: flex;
     margin: 0 auto;
-    justify-content: space-between;
+    justify-content: center;
     width: 280px;
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+    width: 280px;
+
 }
+
 .button {
+
     position: relative;
     padding: 10px 0;
-    width: 130px;
+    width: 150px;
     margin: 30px 0;
-    border-radius: 25px;
+    border-radius: 7px;
     border: none;
     letter-spacing: 0.2px;
     font-weight: 500;
-    background-color:red;
+    background-color:#32C133;
     color: #E6EBEE;
     text-align: center;
+    align-items: center;
     display:inline-block;
-    font-family:'Open Sans',sans-serif;
+    justify-content: center;
+    font-family:'Inter',sans-serif;
     text-decoration:none;
     box-shadow:inset 0 0 0 #22313F;
-    font-size:16px;
-    text-transform:uppercase;
+    font-size:17px;
+    /* text-transform:uppercase; */
     transition:all 0.3s ease-out;
+
 }
+
 .button:focus {
+
     display: none;
+    
 }
+
 .button:hover {
+
     cursor: pointer;
     transition: all 0.2s ease-in-out;
-    box-shadow:inset 0 -50px 0 #22313F;
+    box-shadow: inset 0 -50px 0 #096686;
+
 }
-#msg{
+#msg {
+
+  background-color: #e6ebee;
+  color: #393b45;
+  border: 1px solid #393b45;
+
+}
+#msg:hover {
+
+    color: #fff;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+    box-shadow:inset 0 -50px 0 #096686;
+
+}
+
+#msg {
+
     background-color: #E6EBEE;
     color: #393B45;
     border: 1px solid #393B45;
+
 }
-#msg:hover{
+
+#msg:hover {
+
     color: #fff;
+
 }
 
 /*profile uan*/
 
+/* #icon {
 
-#card-uan{
-    background-color: #fff;
-    height: auto;
-    width: 350px;
-    max-width: 100%;
-    margin: 15px auto;
-    margin-bottom: 15;
-    position: fixed;
-    top: 15;
-    right: 300 ;
-    border-radius: 25px;
-    box-shadow:5px 5px 10px rgba(0, 0, 0, 0.5);
-}
-#card-uan:hover{
-    box-shadow:2px 2px 5px rgba(0, 0, 0, 0.5);
-}
-.card-head-uan{
-    background: linear-gradient(to right, #8f0404,#f30003);
-    text-align: center;
-    width: 100%;
-    background-color: #E6EBEE;
-    border-radius: 25px 25px 0 0;
-    color: #393B45;
-    height: 130px;
-    font-weight: 800;
-    margin: 0;
-}
-h1 {
-    text-align: center;
-    width: 100%;
-    color: red;
-    font-weight: 800;
-    font-family:'Fredoka', sans-serif;
-
-}
-
-.image-crop-uan {
-    display: block;
-    position: relative;
-    background-color: #E6EBEE;
-    width: 150px;
-    height: 150px;
-    margin: 0 auto;
-    margin-top: -80px;
-    overflow: hidden;
-    border-radius: 50%;
-    box-shadow:2px 2px 5px rgba(0, 0, 0, 0.5);
-    border:3px solid #fff;
-}
-#avatar {
-    display: inline;
-    height: 230px;
-    width: auto;
-    margin-left: -34px;
-}
-#bio-uan {
-    margin: 30px 15px;
-    height: auto;
-    display: block;
-}
-#bio-uan p {
     color: #222;
+    margin: 0;
+    padding: 0;
+    position: sticky;
+    top: -40px;
     font-weight: lighter;
-    font-size: 14px;
-    text-align: justify;
-}
-#stats-uan {
-    display: flex;
-    flex-direction: row;
-    height: auto;
-    width: 280px;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
-    font-weight: 500;
-}
-.col-uan {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: auto;
-}
-.stat-uan {
-    font-size: 25px;
-    margin: 0;
-}
-
-.label-uan {
-    margin: 0;
-}
-#buttons-uan {
-    display: flex;
-    margin: 0 auto;
-    justify-content: space-between;
-    width: 280px;
-}
-.button-uan {
-    position: relative;
-    padding: 10px 0;
-    width: 130px;
-    margin: 30px 0;
-    border-radius: 25px;
-    border: none;
-    letter-spacing: 0.2px;
-    font-weight: 500;
-    background-color: red;
-    color: #E6EBEE;
+    font-size: 50px;
+    letter-spacing: 6px;
     text-align: center;
-    display:inline-block;
-    font-family:'Open Sans',sans-serif;
-    text-decoration:none;
-    box-shadow:inset 0 0 0 #22313F;
-    font-size:16px;
-    text-transform:uppercase;
-    transition:all 0.3s ease-out;
-}
-.button-uan:focus {
-    display: none;
-}
-.button-uan:hover {
+    font-weight:400;
     cursor: pointer;
-    transition: all 0.2s ease-in-out;
-    box-shadow:inset 0 -50px 0 #22313F;
-}
-#msg-uan{
-    background-color: #E6EBEE;
-    color: #393B45;
-    border: 1px solid #393B45;
-}
-#msg-uan:hover{
-    color: #fff;
-}
 
-
-
-
+} */
